correct rotate-axis

--- a/static/controls.html
+++ b/static/controls.html
@@ -77,7 +77,7 @@
             };
             
             // Call the API to update the internal state
-            fetch('/api/rotate', {
+            fetch('/api/rotate-axis', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
