--- a/static/controls.html
+++ b/static/controls.html
@@ -58,11 +58,11 @@
         // Color mapping from Color enum (integer) to color name 
         const colorEnumToName = {
             0: "white",  // White
-            1: "yellow", // Yellow
-            2: "blue",   // Blue
-            3: "green",  // Green
-            4: "red",    // Red
-            5: "orange"  // Orange
+            1: "orange", // Orange
+            2: "yellow", // Yellow
+            3: "red",    // Red
+            4: "blue",   // Blue
+            5: "green"   // Green
         };
         
         // Handle rotation using the new axis-based API
